# python-config

./: README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
.wex/: .gitignore  config.yml
.wex/ai/engrams/suite-wexample_pip_suite_manager-performance/src/wexample_config/config_option/: abstract_config_option.py.engram.json  abstract_list_config_option.py.engram.json  abstract_nested_config_option.py.engram.json  children_config_option.py.engram.json  name_config_option.py.engram.json
.wex/knowledge/readme/: introduction.md
.wex/python/: .last-commit
.wex/python/app_manager/: requirements.txt
benchmarks/: test_benchmark.py
src/wexample_config/classes/: abstract_config_manager.py
src/wexample_config/config_option/: abstract_config_option.py  abstract_list_config_option.py  abstract_nested_config_option.py  children_config_option.py  config_option.py  name_config_option.py
src/wexample_config/config_value/: callback_render_config_value.py  config_value.py  config_value_collection.py  nested_config_value.py
src/wexample_config/demo/: demo_config_manager.py
src/wexample_config/demo/config_option/: demo_custom_value_config_option.py  demo_dict_config_option.py  demo_dict_extensible_option.py  demo_extensible_config_option.py  demo_nested_config_option.py  demo_union_config_option.py
src/wexample_config/demo/option_provider/: demo_options_provider.py
src/wexample_config/exception/: invalid_option_exception.py
src/wexample_config/options_provider/: abstract_options_provider.py
tests/: multiple_options_providers_test.py  test_config_manager.py  test_validation.py
wexample_config/classes/: abstract_config_manager.py  config_manager.py
wexample_config/classes/mixins/: multiple_options_providers_mixin.py
wexample_config/config_option/: abstract_config_option.py  abstract_list_config_option.py  abstract_nested_config_option.py  children_config_option.py  config_option.py  name_config_option.py
wexample_config/config_value/: callback_render_config_value.py  config_value.py  config_value_collection.py  custom_type_config_value.py  nested_config_value.py  string_config_value.py
wexample_config/config_value/filter/: abstract_config_value_filter.py  trim_config_value_filter.py
wexample_config/const/: types.py
wexample_config/demo/: demo_config_manager.py
wexample_config/demo/config_option/: demo_custom_value_config_option.py  demo_dict_config_option.py  demo_dict_extensible_option.py  demo_extensible_config_option.py  demo_list_config_option.py  demo_nested_config_option.py  demo_union_config_option.py
wexample_config/demo/option_provider/: demo_options_provider.py
wexample_config/exception/: config_value.py  config_value_type_exception.py  invalid_option_exception.py  invalid_option_value_type_exception.py  option.py
wexample_config/option/: abstract_config_option.py  abstract_nested_config_option.py  abstract_option.py  children_config_option.py  children_option.py  demo_custom_value_config_option.py  demo_dict_extensible_option.py  demo_extensible_config_option.py  demo_list_config_option.py  demo_nested_config_option.py  demo_union_config_option.py  name_config_option.py
wexample_config/option_value/: abstract_config_value.py
wexample_config/options_provider/: abstract_options_provider.py  demo_options_provider.py
wexample_config/src/: config_manager.py  demo_config_class.py
(+15 files in other folders)
