[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-config"
version = "0.0.52"
description = "Helpers to manage dict types configurations."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "pydantic>=2,<3",
    "wexample-helpers==0.0.68",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-config"

[project.optional-dependencies]
dev = [
    "pytest",
]
[tool.setuptools.packages.find]
include = [
    "*",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_config"
from = "src"
